# fiducial-rectifier

./: README.md  pyproject.toml
scripts/: example_usage.py  generate_test_image.py
src/fiducial_rectifier/: __init__.py  core.py
