[project]
name = "fiducial-rectifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Takayuki Osabe", email = "takayukiosabe@gmail.com" }
]
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "typer>=0.26.7",
]

[project.urls]
Homepage = "https://github.com/takosa/fiducial-rectifier"

[project.scripts]
fiducial-rectifier = "fiducial_rectifier:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
